--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Install GNAT
-      run: sudo apt-get install gnat-8 gprbuild
+      run: sudo apt-get install gnat gprbuild
 
     # Runs a set of commands using the runners shell
     - name: Build Cherry
