--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,5 +31,5 @@ jobs:
     - name: Build Cherry
       run: gprbuild cherry.gpr -j0 -k
 
-#    - name: Build Lemon
-#      run: gcc original/lemon.c -o lemon
+    - name: Build Lemon
+      run: gcc original/lemon_3320300.c -o lemon
