Add debug lemon to bulld action - with right filename

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,4 +35,4 @@ jobs:
       run: gcc original/lemon_3320300.c -o lemon
 
     - name: Build Lemon (Debug)
-      run: gcc debug/lemon_3320300.c -o dlemon
+      run: gcc debug/lemon_debug_3320300.c -o dlemon
