--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -27,3 +27,8 @@ jobs:
 
     - name: Build Lemon (Debug)
       run: gcc debug/lemon_debug_3320300.c -o binary/dlemon
+
+    - name: Test Run (-z=1)
+      run: |
+           cd test/sqlite
+           ../../dlemon -z=1 parse.y
