Add Test Run to debug action 2

--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -30,5 +30,6 @@ jobs:
 
     - name: Test Run (-z=1)
       run: |
+           export PATH=binary/:$PATH
            cd test/sqlite
-           ../../dlemon -z=1 parse.y
+           dlemon -z=1 parse.y
