--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -28,8 +28,11 @@ jobs:
     - name: Build Lemon (Debug)
       run: gcc debug/lemon_debug_3320300.c -o binary/dlemon
 
+    - name: Test Run (-z=0)
+      run: |
+           cd test/sqlite
+           ../../binary/dlemon -z=0 parse.y
+
     - name: Test Run (-z=1)
       run: |
-           export PATH=binary/:$PATH
-           cd test/sqlite
            ../../binary/dlemon -z=1 parse.y
