--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -33,6 +33,6 @@ jobs:
            cd test/sqlite
            ../../binary/dlemon -z=0 -T../../original/lempar_3320300.c parse.y
 
-    - name: Test Run (-z=1)
-      run: |
-           ../../binary/dlemon -z=1 -T../../original/lempar_3320300.c parse.y
+#    - name: Test Run (-z=1)
+#      run: |
+#           ../../binary/dlemon -z=1 -T../../original/lempar_3320300.c parse.y
